Expand icon now rotates to show that it can be collapsed again. Fixed the styling on the expanded content.

--- a/pad-framework-master/src/assets/css/pages/defaultSchedule.css
+++ b/pad-framework-master/src/assets/css/pages/defaultSchedule.css
@@ -119,12 +119,7 @@
     content: '\f107';
     float: right;
     margin-left: 5px;
-}
-
-.acc-active:after {
-    font-family: 'Font Awesome\ 5 Free';
-    font-weight: 900;
-    content: "\f106";
+    transform: rotate(180deg);
 }
 
 .default-schedule-container-content {
@@ -134,3 +129,4 @@
     overflow: hidden;
     transition: max-height 0.2s ease-out;
 }
+
